Upcoming:
- Fixed localized names for the colored cables, connectors, and advanced connectors

1.8.4:
- Fixed class loading problem on servers
- Improved crafting recipes for cables, connectors and advanced connectors by using tags

1.8.3:
- First port to 1.14

1.8.2:
- Joseph fixed a pathological case with fluid handling

1.8.1:
- The ctrl-c/ctrl-v hotkeys work on connectors now instead of channels
- The up/down keys move up/down the selected connector

1.8.0:
- Depends on McJtyLib 3.5.0!
- Fixed a problem where the updated proxy would break instantly by hand and not drop anything
- Added ctrl-c/ctrl-v support for copy/pasting channels
- Added support for RFTools Control with a new opcode to enable/disable channels
- Added another opcode to test if a color mask is true
- Added better checks when inserting fluids in a tank to make sure it really worked. This avoids a crash in certain situations

1.7.6:
- API improvements to allow other mods to add connectors to a controller
- Needs McJtyLib 3.1.0
- Support for COFH RF API is removed. Only Forge Energy is supported now
- Various cleanups

1.7.5:
- Fixed a bug with wireless channels not storing the owner correctly
- New feature to copy/paste channels and connectors!

1.7.4:
- WARNING: Do not load any worlds with XNet 1.7.3 or earlier if you last saved them with XNet 1.7.4 or later!
- Joseph fixed log warnings due to tile entities being registered with names like "minecraft:xnet_facade" instead of "xnet:facade".
- Fixed a problem with the redstone proxy blocks being breakable by hand (and not giving any drops)
- Fixed a possible crash with the wireless routers when used in different (unloaded) dimensions
- Made sure that the baked models for cables never return null for the particle texture
- Fixed a problem with the router not showing multiple local channels of the same type

1.7.3:
- Fixed a few baked models that didn't test for null state. This fixes XNet for recent versions of Forge

1.7.2: