@@ -1,5 +1,6 @@
 Upcoming:
 - Fixed localized names for the colored cables, connectors, and advanced connectors
+- Fixed a problem in the controller where the current amount of power would not be shown correctly
 
 1.8.4:
 - Fixed class loading problem on servers
